# Multi-channel-video-stream-real-time-crowd-detection-

./: CMakeLists.txt  README.md  cameras_config.txt  ps.txt  闸门计数-网络摄像头配置文件绘制.py  鼠标点击图片得到像素坐标.py
src/: yolov8_thread_pool_hik.cpp
src/process/: postprocess.cpp
src/task/: comm.cpp  comm.h  mask_utils.cpp  mask_utils.h  yolov8_custom.cpp  yolov8_custom.h  yolov8_thread_pool.cpp  yolov8_thread_pool.h
src/utils/: HCNetSDK.h
